<resources>
    <string name="app_name">SAMKAL</string>
    <string name="info_dan_layanan">Info dan Layanan</string>
    <string name="info_pkb">Info PKB</string>
    <string name="bpprd">BPPRD</string>
    <string name="akan_datang">Akan Datang</string>
    <string name="mekanisme_e_samsat">Mekanisme E-Samsat</string>
    <string name="lokasi_e_samsat">Lokasi Pelayanan E-Samsat</string>
    <string name="jadwal_samling">Jadwal SAMLING</string>
    <string name="persyaratan_e_samsat">Persyaratan Pendaftaran Samsat</string>
    <string name="panduan">Panduan</string>
    <string name="masukkan_no_plat">Masukkan nomor plat anda</string>
    <string name="lihat_info_pkb">Lihat info PKB</string>
    <string name="unknown_error">Unknown error occured</string>
    <string name="processing">Processing</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="please_wait_few_moment">This might take a few moments. Please wait&#8230;</string>
    <string name="bpprd_footer_text">BPPRD Prov.\nKalimantan Utara</string>

    <!-- Info pkb section -->
    <string name="info_kendaraan">Info kendaraan</string>
    <string name="merk">Merk \u0009\u0009\u0009\u0009\u0009: %1s</string>
    <string name="model">Model \u0009\u0009\u0009\u0009\u0009: %1s</string>
    <string name="tahun">Tahun \u0009\u0009\u0009\u0009\u0009: %1s</string>
    <string name="warna">Warna \u0009\u0009\u0009\u0009\u0009: %1s</string>
    <string name="no_rangka">No Rangka \u0009: %1s </string>
    <string name="no_mesin">No Mesin \u0009\u0009: %1s</string>
    <string name="info_pajak_kendaraan">Info pajak kendaraan dan PNBP</string>
    <string name="pkb_pok">PKB POK \u0009\u0009\u0009\u0009\u0009\u0009: %1s</string>
    <string name="pkb_den">PKB DEN \u0009\u0009\u0009\u0009\u0009: %1s</string>
    <string name="swdkllj_pok">SWDKLLJ POK \u0009\u0009: %1s </string>
    <string name="swdkllj_den">SWDKLLJ DEN \u0009: %1s </string>
    <string name="pnbp_stnk">PNBP STNK\u0009\u0009\u0009\u0009: %1s </string>
    <string name="pnbp_tnkb">PNBP TNKB\u0009\u0009\u0009\u0009: %1s </string>
    <string name="total">TOTAL \u0009\u0009\u0009\u0009\u0009\u0009\u0009: %1s </string>
    <string name="tgl_pajak">TGL PAJAK\u0009\u0009\u0009\u0009: %1s </string>
    <string name="tgl_stnk">TGL STNK \u0009\u0009\u0009\u0009\u0009: %1s </string>
    <string name="milik_ke">MILIK KE \u0009\u0009\u0009\u0009\u0009: %1s </string>
    <string name="keterangan">KETERANGAN \u0009\u0009: %1s </string>


    <!-- Error section -->
    <string name="error_input_required">Harus diisi.</string>
    <string name="error_not_registered">Plat nomor %1s belum terdaftar.</string>
    <string name="error_server">Terjadi kesalahan teknis, mohon mengulang pencarian Info PKB.</string>

    <!-- PDF Viewer Section -->
    <string name="pdf_viewer_title">PDF Viewer</string>
    <string name="pdf_viewer_status">You are viewing %1s</string>
</resources>
